[gd_scene load_steps=2 format=3 uid="uid://bfdmwpidg2ksm"]

[ext_resource type="Script" uid="uid://cj871ell56y5w" path="res://scenes/minigames/connect_wire/connect_wire.gd" id="1_qjcu3"]

[node name="ConnectWire" type="Node"]
script = ExtResource("1_qjcu3")
metadata/_custom_type_script = "uid://4wi5jylbw10i"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="WiresLeft" type="Control" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/WiresLeft"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -220.0
offset_right = 25.0
offset_bottom = 220.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/WiresLeft/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="WireLeft1" type="Button" parent="Control/Panel/WiresLeft/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WireLeft2" type="Button" parent="Control/Panel/WiresLeft/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WireLeft3" type="Button" parent="Control/Panel/WiresLeft/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WireLeft4" type="Button" parent="Control/Panel/WiresLeft/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel2" type="Panel" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="WiresRight" type="Control" parent="Control/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel2/WiresRight"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -210.0
offset_right = 35.0
offset_bottom = 210.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel2/WiresRight/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="WireRight1" type="Button" parent="Control/Panel2/WiresRight/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/Panel2/WiresRight/MarginContainer/VBoxContainer/WireRight1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WireRight2" type="Button" parent="Control/Panel2/WiresRight/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/Panel2/WiresRight/MarginContainer/VBoxContainer/WireRight2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WireRight3" type="Button" parent="Control/Panel2/WiresRight/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/Panel2/WiresRight/MarginContainer/VBoxContainer/WireRight3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WireRight4" type="Button" parent="Control/Panel2/WiresRight/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/Panel2/WiresRight/MarginContainer/VBoxContainer/WireRight4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="button_down" from="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft1" to="." method="_on_wire_left_1_button_down"]
[connection signal="pressed" from="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft1" to="." method="_on_wire_left_1_pressed"]
[connection signal="button_down" from="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft2" to="." method="_on_wire_left_2_button_down"]
[connection signal="pressed" from="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft2" to="." method="_on_wire_left_2_pressed"]
[connection signal="button_down" from="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft3" to="." method="_on_wire_left_3_button_down"]
[connection signal="pressed" from="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft3" to="." method="_on_wire_left_3_pressed"]
[connection signal="button_down" from="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft4" to="." method="_on_wire_left_4_button_down"]
[connection signal="pressed" from="Control/Panel/WiresLeft/MarginContainer/VBoxContainer/WireLeft4" to="." method="_on_wire_left_4_pressed"]
[connection signal="pressed" from="Control/Panel2/WiresRight/MarginContainer/VBoxContainer/WireRight1" to="." method="_on_wire_right_1_pressed"]
[connection signal="pressed" from="Control/Panel2/WiresRight/MarginContainer/VBoxContainer/WireRight2" to="." method="_on_wire_right_2_pressed"]
[connection signal="pressed" from="Control/Panel2/WiresRight/MarginContainer/VBoxContainer/WireRight3" to="." method="_on_wire_right_3_pressed"]
[connection signal="pressed" from="Control/Panel2/WiresRight/MarginContainer/VBoxContainer/WireRight4" to="." method="_on_wire_right_4_pressed"]
